# jupyterlab

docs/plans/: 2026-02-25-distributed-spmd-design.md  2026-02-25-distributed-spmd-implementation.md
docs/source/user/: distributed.md
examples/: distributed_nccl_demo.ipynb
jupyterlab_distributed/: __init__.py  __main__.py  config.py  gateway.py  handlers.py  kernel.py  launcher.py  magics.py  provisioner.py  pyproject.toml  worker.py
jupyterlab_distributed/kernelspec/: kernel.json
tests/: test_distributed_subprocess.py  test_e2e_distributed.py  test_nccl_direct.py
tests/test_distributed/: test_config.py  test_gateway.py  test_handlers.py  test_integration.py  test_kernel.py  test_launcher.py  test_magics.py  test_provisioner.py  test_worker.py
