[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterlab-distributed"
version = "0.1.0"
description = "Distributed SPMD cell execution for JupyterLab"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.0",
    "jupyter-client>=7.0",
    "websockets>=12.0",
]

[project.entry-points."jupyter_client.kernel_provisioners"]
distributed-provisioner = "jupyterlab_distributed.provisioner:DistributedProvisioner"
