[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "jupyterlab-distributed"
version = "0.1.0"
description = "Distributed SPMD cell execution for JupyterLab"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.0",
    "jupyter-client>=7.0",
    "websockets>=12.0",
]

[project.entry-points."jupyter_client.kernel_provisioners"]
distributed-provisioner = "jupyterlab_distributed.provisioner:DistributedProvisioner"

[tool.setuptools.packages.find]
where = [".."]
include = ["jupyterlab_distributed*"]

[tool.setuptools.package-data]
jupyterlab_distributed = ["kernelspec/*.json"]
